style: fixed bg image not displaying properly but horizontal scrollbar is back...

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ main {
 
 #bgImage {
     min-height: 100vh;
+    min-width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
